syntax = "proto3";

package users.v1.ABTest;

option go_package = "github.com/kalina-malina/IM-PROTOS/generated/users/v1/ab_groups/ab_groups";


enum ABTestGroup {
  AB_TEST_GROUP_A = 0;
  AB_TEST_GROUP_B = 1;
  AB_TEST_GROUP_C = 2;
  AB_TEST_GROUP_D = 3;
}